# PepSeqPred

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.pypi.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  publish.yml  tests.yml
data/preprocessing/: generate_species_subset.ipynb  populate_metadata.ipynb
data/sample/: peptide-metadata.tsv  protein-targets.fasta  reactivity-zscore.tsv
docs/: index.html  pv1_cwp_bkp_merge_split_and_pos_weight.md  scripts.js  styles.css  training_quality_findings.md
docs/assets/results/: paired_stats.csv  poster_analysis_summary.json  seed_metrics.csv
docs/data/: benchmark_snapshot.json
envs/: environment.hpc.yml  environment.local.yml
esm/: esm_cli.py
esm2/: esm_cli.py
esm2/analysis/: analyze_pt_embeddings.ipynb
esm2/embedding_analysis/: analyze_pt_embeddings.ipynb
esm2/scripts/: generateembeddings.sh
esm2/tests/: generatesample.sh  smoketest.sh
labels/: labels_cli.py  labels_cli.pyz
legacy/: analyze_pt_embeddings.ipynb  populate_metadata.ipynb  zthresh_development.ipynb
linker/: builder.py  dataset.py  linker_cli.py
linker/scripts/: linkdata.sh  linker_cli.pyz
linker/tests/: linkersmoketest.sh  linksample.sh  smoketest.sh
nn/models/: base.py  ffnn.py
nn/pred/: prediction_cli.py
nn/pred/scripts/: predictepitope.sh
nn/pred/tests/: smoketest.sh
nn/prediction/: make_prediction.pyz  prediction_cli.py
nn/train/: train_ffnn_cli.py  train_ffnn_optuna_cli.py  trainer.py
nn/train/pipelineio/: logger.py  peptidedataset.py  proteindataset.py
nn/train/scripts/: train_ffnn.pyz  train_ffnn_optuna.pyz  trainffnn.sh  trainffnnoptuna.sh
nn/train/tests/: smoketest.sh  trainsmoketest.sh
notebooks/: analyze_model_results.ipynb  analyze_pt_embeddings.ipynb  build_pred_test.ipynb  cwp_topk_reactivity_enrichment.ipynb  exclude_peptides.ipynb  generate_nn_sample.ipynb  generate_sample.ipynb  generate_species_subset.ipynb  get_pos_neg_weights.ipynb  get_pos_reg_weights.ipynb  hpc_pretrained_api_smoke_test.ipynb  open_metadata_fasta_file.ipynb  pretrained_sample.ipynb  topk_reactivity_enrichment.ipynb  verify_residue_labels.ipynb
pipelineio/: peptidedataset.py
preprocess/: preprocess_cli.py  process.py  read.py
preprocess/pipelineio/: read.py
preprocess/scripts/: preprocessdata.sh
scripts/analysis/: analyze_seeded_eval_poster.py  pullevaldata.ps1  pullevaldata.sh
scripts/hpc/: evalffnnsweep.sh  evaluateffnn.sh  generateembeddings.sh  generatelabels.sh  predictepitope.sh  preprocessdata.sh  train.sh  trainffnn.sh  trainffnnoptuna.sh  trainoptuna.sh
scripts/tools/: bkp_eval_pipeline.py  buildpyz.py  cocci_eval_pipeline.py  pyzapps.py  rename_embeddings_id_family.py
src/pepseqpred/: __init__.py
src/pepseqpred/api/: __init__.py  predictor.py  pretrainedregistry.py  types.py
src/pepseqpred/apps/: esm_cli.py  evaluate_ffnn_cli.py  labels_cli.py  prediction_cli.py  prepare_dataset_cli.py  preprocess_cli.py  train_cli.py  train_ffnn_cli.py  train_ffnn_optuna_cli.py  train_optuna_cli.py
src/pepseqpred/core/data/: proteindataset.py  seq_len_feature.py
src/pepseqpred/core/embeddings/: esm2.py
src/pepseqpred/core/io/: keys.py  logger.py  read.py  write.py
src/pepseqpred/core/labels/: builder.py
src/pepseqpred/core/models/: __init__.py  base.py  factory.py  ffnn.py
src/pepseqpred/core/predict/: __init__.py  artifacts.py  inference.py
src/pepseqpred/core/preprocess/: preparedataset.py  pv1.py  zscores.py
src/pepseqpred/core/train/: curveartifacts.py  ddp.py  embedding.py  metrics.py  seed.py  split.py  threshold.py  trainer.py  weights.py
src/scripts/: generateembeddings_cpu.sh  generatelabels.sh  predictepitope.sh
tests/: conftest.py
tests/e2e/: test_train_to_predict_e2e.py
tests/integration/: test_eval_ffnn_cli_smoke.py  test_prediction_cli_smoke.py  test_prepare_dataset_multisource_pipeline.py  test_train_clis_inprocess.py  test_train_ffnn_cli_smoke.py  test_trainer_ddp_uneven.py
tests/unit/: test_package_init.py
tests/unit/api/: test_predictor_api.py  test_predictor_api_edges.py  test_pretrained_api.py
tests/unit/apps/: test_cli_wrappers.py  test_evaluate_ffnn_cli_helpers.py  test_evaluate_ffnn_cli_metrics.py  test_evaluate_ffnn_cli_selection_and_curves.py  test_prediction_cli_config.py  test_prediction_cli_ensemble.py  test_train_cli_coverage.py  test_train_ffnn_run_plans.py
tests/unit/core/data/: test_proteindataset.py  test_proteindataset_edge_cases.py
tests/unit/core/embeddings/: test_esm2.py
tests/unit/core/io/: test_keys.py  test_read_csv.py  test_read_write_preprocess.py
tests/unit/core/labels/: test_builder.py
tests/unit/core/models/: test_model_factory.py
tests/unit/core/predict/: test_artifacts.py  test_inference.py  test_inference_edges.py
tests/unit/core/preprocess/: test_prepare_dataset.py
tests/unit/core/train/: test_curve_artifacts.py  test_split.py  test_support_modules.py  test_threshold.py  test_trainer_batch_step.py  test_trainer_fit.py  test_weights.py
web/: next.config.mjs  package-lock.json  package.json  tsconfig.json
web/.next/: trace
web/.next/cache/: .rscinfo
web/.next/server/: webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @swc.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js  (+1 more)
web/app/: globals.css  layout.tsx  page.tsx
web/app/reproducibility/: page.tsx
web/src/components/: site-footer.tsx  site-header.tsx
web/src/lib/: format.ts  manualData.ts
zthresh/: zthresh_test.ipynb
(+48 files in other folders)
