[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepseqpred"
version = "1.0.0"
description = "Residue-level epitope prediction pipeline for peptide/protein workflows."
readme = "README.pypi.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Jeffrey Hoelzel", email = "jmh2338@nau.edu" },
  { name = "Jason Ladner", email = "jason.ladner@nau.edu" }
]
keywords = ["bioinformatics", "epitope", "protein", "esm2", "pytorch"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=2.3,<3",
  "pandas>=2.3,<3",
  "torch>=2.4,<3",
  "fair-esm==2.0.0",
  "scikit-learn>=1.5,<2",
  "optuna>=3.5,<5"
]

[project.urls]
Homepage = "https://github.com/LadnerLab/PepSeqPred"
Repository = "https://github.com/LadnerLab/PepSeqPred"
Issues = "https://github.com/LadnerLab/PepSeqPred/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=pepseqpred --cov-report=term-missing --cov-report=xml --cov-fail-under=75"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast isolated tests",
  "integration: component interaction tests",
  "e2e: end-to-end pipeline tests",
  "slow: longer-running tests"
]

[tool.coverage.run]
branch = true
source = ["pepseqpred"]
omit = [
  "tests/*"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

[project.scripts]
pepseqpred-esm = "pepseqpred.apps.esm_cli:main"
pepseqpred-labels = "pepseqpred.apps.labels_cli:main"
pepseqpred-predict = "pepseqpred.apps.prediction_cli:main"
pepseqpred-preprocess = "pepseqpred.apps.preprocess_cli:main"
pepseqpred-eval-ffnn = "pepseqpred.apps.evaluate_ffnn_cli:main"
pepseqpred-train-ffnn = "pepseqpred.apps.train_ffnn_cli:main"
pepseqpred-train-ffnn-optuna = "pepseqpred.apps.train_ffnn_optuna_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"pepseqpred.api" = [
  "pretrained_artifacts/*/*.json",
  "pretrained_artifacts/*/*.pt"
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "pepseqpred",
  "pepseqpred.api",
  "pepseqpred.core",
  "pepseqpred.core.predict",
  "pepseqpred.core.embeddings",
  "pepseqpred.core.models",
  "pepseqpred.core.io"
]
exclude = [
  "pepseqpred.apps*",
  "pepseqpred.core.train*",
  "pepseqpred.core.preprocess*",
  "pepseqpred.core.data*",
  "pepseqpred.core.labels*"
]
